JumpScript/tests/baselines/reference/namedFunctionExpressionCallErrors.errors.txt
tests/cases/compiler/namedFunctionExpressionCallErrors.jump(5,1): error TS2304: Cannot find name 'foo'.
tests/cases/compiler/namedFunctionExpressionCallErrors.jump(12,5): error TS2304: Cannot find name 'foo'.
tests/cases/compiler/namedFunctionExpressionCallErrors.jump(16,1): error TS2304: Cannot find name 'bar'.


==== tests/cases/compiler/namedFunctionExpressionCallErrors.jump (3 errors) ====
    var recurser = function foo() {
    };
    
    // Error: foo should not be visible here
    foo();
    ~~~
!!! error TS2304: Cannot find name 'foo'.
    
    // recurser should be
    recurser();
    
    (function bar() {
        // Error: foo should not be visible here either
        foo();
        ~~~
!!! error TS2304: Cannot find name 'foo'.
    });
    
    // Error: bar should not be visible
    bar();
    ~~~
!!! error TS2304: Cannot find name 'bar'.